--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
         "*.tcc": "cpp",
-        "iterator": "cpp"
+        "iterator": "cpp",
+        "*.tpp": "cpp"
     }
 }
