--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,4 @@
-BUILD/
-### C++ ###
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-### CMake ###
-CMakeLists.txt.user
-CMakeCache.txt
-_deps
-
-### CMake Patch ###
-# External projects
-*-prefix/
+BUILD/src/
+doc/build/
+doc/source/xml
+.vscode/settings.json
